--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -37,8 +37,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery2_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery2.avif">
+                        <img src="../dist/img/gallery2_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery2.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -50,8 +50,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery3_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery3.avif">
+                        <img src="../dist/img/gallery3_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery3.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -64,8 +64,8 @@
 
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery4_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery4.avif">
+                        <img src="../dist/img/gallery4_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery4.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -77,8 +77,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery5_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery5.avif">
+                        <img src="../dist/img/gallery5_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery5.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -90,8 +90,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery6_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery6.avif">
+                        <img src="../dist/img/gallery6_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery6.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -103,8 +103,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery7_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery7.avif">
+                        <img src="../dist/img/gallery7_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery7.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -116,8 +116,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery8_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery8.avif">
+                        <img src="../dist/img/gallery8_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery8.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -129,8 +129,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery9_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery9.avif">
+                        <img src="../dist/img/gallery9_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery9.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -142,8 +142,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery10_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery10.avif">
+                        <img src="../dist/img/gallery10_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery10.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -155,8 +155,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery11_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery11.avif">
+                        <img src="../dist/img/gallery11_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery11.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -168,8 +168,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery12_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery12.avif">
+                        <img src="../dist/img/gallery12_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery12.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -181,8 +181,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery13_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery13.avif">
+                        <img src="../dist/img/gallery13_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery13.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -194,8 +194,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery14_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery14.avif">
+                        <img src="../dist/img/gallery14_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery14.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -207,8 +207,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery15_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery15.avif">
+                        <img src="../dist/img/gallery15_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery15.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -220,8 +220,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery16_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery16.avif">
+                        <img src="../dist/img/gallery16_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery16.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -233,8 +233,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery17_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery17.avif">
+                        <img src="../dist/img/gallery17_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery17.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -246,8 +246,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery18_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery18.avif">
+                        <img src="../dist/img/gallery18_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery18.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -259,8 +259,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery19_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery19.avif">
+                        <img src="../dist/img/gallery19_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery19.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -272,8 +272,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery20_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery20.avif">
+                        <img src="../dist/img/gallery20_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery20.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -285,8 +285,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery21_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery21.avif">
+                        <img src="../dist/img/gallery21_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery21.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -298,8 +298,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery22_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery22.avif">
+                        <img src="../dist/img/gallery22_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery22.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
@@ -311,8 +311,8 @@
                 </div>
                 <div class="bsa-gallery-item">
                     <div class="card border-0 shadow-sm">
-                        <img src="../dist/img/gallery23_thumb.avif"
-                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery23.avif">
+                        <img src="../dist/img/gallery23_thumb.png"
+                             class="card-img-top bsa-cursor-pointer" alt="..." data-src="../dist/img/gallery23.png">
                         <div class="card-body">
                             <h5 class="card-title">图片标题</h5>
                             <p class="card-text">图片描述</p>
