fix:错误页面和锁屏页面在移动端奇怪的滚动条

--- a/pages/errors.html
+++ b/pages/errors.html
@@ -13,11 +13,10 @@
     <link rel="stylesheet" href="../dist/css/bootstrap-admin.min.css">
     <title>bootstrap-admin开源免费响应式后台管理系统模板</title>
 </head>
-<body class="bg-body-tertiary py-3">
+<body class="bg-body-tertiary">
 <div class="min-vh-100 d-flex justify-content-center align-items-center bg-body-tertiary py-3">
-    <div class="px-2">
+    <div class="p-2">
         <div class="container-fluid">
-
             <div class="bsa-error-code">
                 403
             </div>
