--- a/pages/lockscreen.html
+++ b/pages/lockscreen.html
@@ -13,22 +13,26 @@
     <link rel="stylesheet" href="../dist/css/bootstrap-admin.min.css">
     <title>bootstrap-admin开源免费响应式后台管理系统模板</title>
 </head>
-<body class="bg-body-tertiary py-3">
+<body class="bg-body-tertiary">
 
-<div class="min-vh-100 p-2 bg-body-tertiary d-flex flex-column align-items-center justify-content-center">
+
+<div class="d-flex align-items-center justify-content-center">
+  <div style="width: 400px;max-width: 100%;margin-top: 12vh;" class="p-2 d-flex flex-column align-items-center">
     <h2 class="">上午 11:11</h2>
     <p class="text-secondary">2023年 5月 20日 星期六</p>
     <i class="bi bi-person-circle bsa-fs-60 text-secondary"></i>
     <p>Administrator</p>
     <form id="form" style="width: 280px;max-width: 100%">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="请输入登录密码" aria-label="锁屏密码" name="lockpwd">
-            <button class="btn btn-outline-secondary" type="submit">
-                <i class="bi bi-box-arrow-in-right"></i>
-            </button>
-        </div>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="请输入登录密码" aria-label="锁屏密码" name="lockpwd">
+        <button class="btn btn-outline-secondary" type="submit">
+          <i class="bi bi-box-arrow-in-right"></i>
+        </button>
+      </div>
     </form>
+  </div>
 </div>
+
 
 <!--回到顶部开始-->
 <a href="javaScript:" class="bsa-back-to-top"><i class='bi bi-arrow-up-short'></i></a>
