--- a/pages/login.html
+++ b/pages/login.html
@@ -13,55 +13,57 @@
     <link rel="stylesheet" href="../dist/css/bootstrap-admin.min.css">
     <title>bootstrap-admin开源免费响应式后台管理系统模板</title>
 </head>
-<body>
+<body class="bg-body-tertiary">
 
-
-<div class="min-vh-100  p-2 bg-body-tertiary d-flex flex-column align-items-center justify-content-center">
-    <h2>bootstrap-admin</h2>
-    <p class="text-secondary">基于bootstrap5设计的后台管理模板系统</p>
-    <form id="form" class="form" style="width: 380px;max-width: 100%">
-        <div class="mb-3">
-            <div class="input-group">
-                <span class="input-group-text bg-white "><i class="bi bi-person"></i></span>
-                <input type="text" class="form-control" placeholder="请输入用户" name="username"
-                       id="username" aria-label="username">
-            </div>
+<div class="d-flex align-items-center justify-content-center">
+  <div style="width: 400px;max-width: 100%;margin-top: 12vh;" class="p-2">
+    <h2 class="text-center">bootstrap-admin</h2>
+    <p class="text-secondary text-center">基于bootstrap5.1.3设计的后台管理模板系统</p>
+    <form id="form" class="form">
+      <div class="mb-3">
+        <div class="input-group">
+          <span class="input-group-text bg-white "><i class="bi bi-person"></i></span>
+          <input type="text" class="form-control" placeholder="请输入用户" name="username"
+                 id="username" aria-label="username">
         </div>
+      </div>
 
-        <div class="mb-3">
-            <div class="input-group bsa-show_hide_password">
-                <span class="input-group-text bg-white"><i class="bi bi-person-lock"></i></span>
-                <input type="password" class="form-control" placeholder="请输入密码"
-                       name="password"
-                       autocomplete="off"
-                       id="password" aria-label="password">
-                <span class="input-group-text bg-white bsa-cursor-pointer"><i class="bi bi-eye-slash"></i></span>
-            </div>
+      <div class="mb-3">
+        <div class="input-group bsa-show_hide_password">
+          <span class="input-group-text bg-white"><i class="bi bi-person-lock"></i></span>
+          <input type="password" class="form-control" placeholder="请输入密码"
+                 name="password"
+                 autocomplete="off"
+                 id="password" aria-label="password">
+          <span class="input-group-text bg-white bsa-cursor-pointer"><i class="bi bi-eye-slash"></i></span>
         </div>
+      </div>
 
-        <div class="mb-3">
-            <div class="input-group">
-                <span class="input-group-text bg-white"><i class="bi bi-shield-lock"></i></span>
-                <input type="text" class="form-control" id="captcha" name="captcha" aria-label="captcha"
-                       placeholder="请输入验证码" style="min-width: 80px">
-                <img src="../dist/img/captcha.gif" alt="验证码"
-                     class="bsa-cursor-pointer" style="height: 38px;width: 120px"/>
-            </div>
+      <div class="mb-3">
+        <div class="input-group">
+          <span class="input-group-text bg-white"><i class="bi bi-shield-lock"></i></span>
+          <input type="text" class="form-control" id="captcha" name="captcha" aria-label="captcha"
+                 placeholder="请输入验证码" style="min-width: 80px">
+          <img src="../dist/img/captcha.gif" alt="验证码"
+               class="bsa-cursor-pointer" style="height: 38px;width: 120px"/>
         </div>
+      </div>
 
-        <div class="mb-3 d-flex align-items-center justify-content-between flex-wrap gap-3 ">
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1" name="remember"
-                       value="1">
-                <label class="form-check-label" for="exampleCheck1">十天内免登录</label>
-            </div>
-            <a href="javascript:" class="link-success text-decoration-none">忘记密码?</a>
+      <div class="mb-3 d-flex align-items-center justify-content-between flex-wrap gap-3 ">
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1" name="remember"
+                 value="1">
+          <label class="form-check-label" for="exampleCheck1">十天内免登录</label>
         </div>
+        <a href="javascript:" class="link-success text-decoration-none">忘记密码?</a>
+      </div>
 
-        <div class="d-grid gap-2">
-            <button class="btn btn-outline-success" type="submit"><i class="bi bi-box-arrow-in-right"></i> 登入</button>
-        </div>
+      <div class="d-grid gap-2">
+        <button class="btn btn-outline-success" type="submit"><i class="bi bi-box-arrow-in-right"></i> 登入</button>
+      </div>
+
     </form>
+  </div>
 </div>
 
 
