[M][2023-11-04]前端页面初版

--- a/index.html
+++ b/index.html
@@ -281,152 +281,160 @@
             <li>
               <a href="pages/node.html">节点列表</a>
             </li>
-          </ul>
-        </li>
-        <li>
-          <a href="javascript:" class="has-children">
-            <i class="bi bi-filetype-html"></i>示例页面
-          </a>
-          <ul>
             <li>
-              <a href="pages/blank.html">新页面</a>
+              <a href="pages/pic8.html">图片列表</a>
             </li>
             <li>
-              <!-- target="_self":添加该属性可以让该页面不从tab页面里打开  -->
-              <a href="pages/lockscreen.html" target="_self">锁屏页</a>
-            </li>
-            <li>
-              <a href="pages/gallery.html">图库列表</a>
-            </li>
-            <li>
-              <a href="pages/errors.html">错误页面</a>
-            </li>
-            <li>
-              <a href="pages/login.html" target="_self">登录页面</a>
-            </li>
-            <li>
-              <a href="pages/timeline.html">时间轴</a>
-            </li>
-            <li>
-              <a href="pages/layout1.html">布局示例1</a>
-            </li>
-            <li>
-              <a href="pages/layout2.html">布局示例2</a>
-            </li>
-            <li>
-              <a href="pages/layout3.html">布局示例3</a>
+              <a href="pages/pic7.html">图片列表2</a>
             </li>
           </ul>
         </li>
-        <li>
-          <a href="javascript:" class="has-children">
-            <i class="bi bi-filetype-js"></i>插件
-          </a>
-          <ul>
-            <li><a href="pages/plugin-day.js.html">day.js(时间格式)</a></li>
-            <li><a href="pages/plugin-clipboard.html">复制粘贴插件</a></li>
-            <li><a href="pages/plugin-shepherd.html">更新引导插件</a></li>
-            <li><a href="pages/plugin-fullcalendar.html">日历</a></li>
-            <li><a href="pages/plugin-video-js.html">视频播放器</a></li>
-            <li><a href="pages/plugin-pickr.html">颜色选择器</a></li>
-            <li><a href="pages/plugin-raty-js.html">评分插件</a></li>
-            <li><a href="pages/plugin-bootstrap-input-spinner.html">输入框微调插件</a></li>
-            <li><a href="pages/plugin-bs-stepper.html">步骤条插件</a></li>
-            <li><a href="pages/plugin-sweetalert2.html">sweetalert2</a></li>
-            <li><a href="pages/plugin-formvalidation.html">表单验证</a></li>
-            <li><a href="pages/plugin-tempus-dominus.html">日期时间</a></li>
-            <li><a href="pages/plugin-croppie.html">头像裁剪</a></li>
-            <li>
-              <a href="javascript:" class="has-children">树形组件</a>
-              <ul>
-                <li><a href="pages/plugin-ztree.html">ztree</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:" class="has-children">图表</a>
-              <ul>
-                <li><a href="pages/plugin-chart.html">chart.js</a></li>
-                <li><a href="pages/plugin-echarts.html">echart.js</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:" class="has-children">数据表格</a>
-              <ul>
-                <li><a href="pages/plugin-bootstrap-table.html">bootstrap-table</a></li>
-                <li><a href="pages/plugin-datatables.html">datatables</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:" class="has-children">编辑器</a>
-              <ul>
-                <li><a href="pages/plugin-wangeditor.html">wangeditor</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="javascript:" class="has-children">文件上传</a>
-              <ul>
-                <li><a href="pages/plugin-bootstrap-fileinput.html">bootstrap-fileinput</a></li>
-                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>
-              </ul>
-            </li>
-            <li><a href="pages/plugin-select2.html">select2</a></li>
-            <li><a href="pages/plugin-bootstrap-select.html">bootstrap-select</a></li>
-            <li><a href="pages/plugin-fonticonpicker.html">图标选择器</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="javascript:" class="has-children">
-            <i class="bi bi-gear"></i>设置
-          </a>
-          <ul>
-            <li><a href="pages/sys_website.html">网站设置</a></li>
-            <li><a href="pages/sys_email.html">邮件服务</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="docs/index.html" target="_blank">
-            <i class="bi bi-filetype-doc"></i>文档
-          </a>
-        </li>
-        <li>
-          <a href="javascript:" class="has-children">
-            <i class="bi bi-list-nested"></i>多级菜单
-          </a>
-          <ul>
-            <li><a href="pages/multilevel.html?id=1">一级菜单</a></li>
-            <li>
-              <a href="javascript:" class="has-children">一级菜单</a>
-              <ul>
-                <li><a href="pages/multilevel.html?id=2">二级菜单</a></li>
-                <li>
-                  <a href="javascript:" class="has-children">二级菜单</a>
-                  <ul>
-                    <li><a href="pages/multilevel.html?id=3">三级菜单</a></li>
-                    <li>
-                      <a href="javascript:" class="has-children">三级菜单</a>
-                      <ul>
-                        <li><a href="pages/multilevel.html?id=4">四级菜单</a></li>
-                        <li>
-                          <a href="javascript:" class="has-children">四级菜单</a>
-                          <ul>
-                            <li><a href="pages/multilevel.html?id=5">五级菜单</a></li>
-                            <li><a href="pages/multilevel.html?id=6">五级菜单</a></li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="pages/multilevel.html?id=7" class="has-children">一级菜单</a>
-              <ul>
-                <li><a href="pages/multilevel.html?id=8">二级菜单</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
+<!--以下是多余的不需要-->
+<!--        <li>-->
+<!--          <a href="javascript:" class="has-children">-->
+<!--            <i class="bi bi-filetype-html"></i>示例页面-->
+<!--          </a>-->
+<!--          <ul>-->
+<!--            <li>-->
+<!--              <a href="pages/blank.html">新页面</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              &lt;!&ndash; target="_self":添加该属性可以让该页面不从tab页面里打开  &ndash;&gt;-->
+<!--              <a href="pages/lockscreen.html" target="_self">锁屏页</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/gallery.html">图库列表</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/errors.html">错误页面</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/login.html" target="_self">登录页面</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/timeline.html">时间轴</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/layout1.html">布局示例1</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/layout2.html">布局示例2</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/layout3.html">布局示例3</a>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="javascript:" class="has-children">-->
+<!--            <i class="bi bi-filetype-js"></i>插件-->
+<!--          </a>-->
+<!--          <ul>-->
+<!--            <li><a href="pages/plugin-day.js.html">day.js(时间格式)</a></li>-->
+<!--            <li><a href="pages/plugin-clipboard.html">复制粘贴插件</a></li>-->
+<!--            <li><a href="pages/plugin-shepherd.html">更新引导插件</a></li>-->
+<!--            <li><a href="pages/plugin-fullcalendar.html">日历</a></li>-->
+<!--            <li><a href="pages/plugin-video-js.html">视频播放器</a></li>-->
+<!--            <li><a href="pages/plugin-pickr.html">颜色选择器</a></li>-->
+<!--            <li><a href="pages/plugin-raty-js.html">评分插件</a></li>-->
+<!--            <li><a href="pages/plugin-bootstrap-input-spinner.html">输入框微调插件</a></li>-->
+<!--            <li><a href="pages/plugin-bs-stepper.html">步骤条插件</a></li>-->
+<!--            <li><a href="pages/plugin-sweetalert2.html">sweetalert2</a></li>-->
+<!--            <li><a href="pages/plugin-formvalidation.html">表单验证</a></li>-->
+<!--            <li><a href="pages/plugin-tempus-dominus.html">日期时间</a></li>-->
+<!--            <li><a href="pages/plugin-croppie.html">头像裁剪</a></li>-->
+<!--            <li>-->
+<!--              <a href="javascript:" class="has-children">树形组件</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/plugin-ztree.html">ztree</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="javascript:" class="has-children">图表</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/plugin-chart.html">chart.js</a></li>-->
+<!--                <li><a href="pages/plugin-echarts.html">echart.js</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="javascript:" class="has-children">数据表格</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/plugin-bootstrap-table.html">bootstrap-table</a></li>-->
+<!--                <li><a href="pages/plugin-datatables.html">datatables</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="javascript:" class="has-children">编辑器</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/plugin-wangeditor.html">wangeditor</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="javascript:" class="has-children">文件上传</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/plugin-bootstrap-fileinput.html">bootstrap-fileinput</a></li>-->
+<!--                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li><a href="pages/plugin-select2.html">select2</a></li>-->
+<!--            <li><a href="pages/plugin-bootstrap-select.html">bootstrap-select</a></li>-->
+<!--            <li><a href="pages/plugin-fonticonpicker.html">图标选择器</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="javascript:" class="has-children">-->
+<!--            <i class="bi bi-gear"></i>设置-->
+<!--          </a>-->
+<!--          <ul>-->
+<!--            <li><a href="pages/sys_website.html">网站设置</a></li>-->
+<!--            <li><a href="pages/sys_email.html">邮件服务</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="docs/index.html" target="_blank">-->
+<!--            <i class="bi bi-filetype-doc"></i>文档-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <a href="javascript:" class="has-children">-->
+<!--            <i class="bi bi-list-nested"></i>多级菜单-->
+<!--          </a>-->
+<!--          <ul>-->
+<!--            <li><a href="pages/multilevel.html?id=1">一级菜单</a></li>-->
+<!--            <li>-->
+<!--              <a href="javascript:" class="has-children">一级菜单</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/multilevel.html?id=2">二级菜单</a></li>-->
+<!--                <li>-->
+<!--                  <a href="javascript:" class="has-children">二级菜单</a>-->
+<!--                  <ul>-->
+<!--                    <li><a href="pages/multilevel.html?id=3">三级菜单</a></li>-->
+<!--                    <li>-->
+<!--                      <a href="javascript:" class="has-children">三级菜单</a>-->
+<!--                      <ul>-->
+<!--                        <li><a href="pages/multilevel.html?id=4">四级菜单</a></li>-->
+<!--                        <li>-->
+<!--                          <a href="javascript:" class="has-children">四级菜单</a>-->
+<!--                          <ul>-->
+<!--                            <li><a href="pages/multilevel.html?id=5">五级菜单</a></li>-->
+<!--                            <li><a href="pages/multilevel.html?id=6">五级菜单</a></li>-->
+<!--                          </ul>-->
+<!--                        </li>-->
+<!--                      </ul>-->
+<!--                    </li>-->
+<!--                  </ul>-->
+<!--                </li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/multilevel.html?id=7" class="has-children">一级菜单</a>-->
+<!--              <ul>-->
+<!--                <li><a href="pages/multilevel.html?id=8">二级菜单</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--          </ul>-->
+<!--        </li>-->
+
       </ul>
     </div>
     <!--  侧边栏底部(用于演示,不需要可删除)  -->
