[M][2023-11-04]前端页面不使用的页面注释

--- a/index.html
+++ b/index.html
@@ -260,33 +260,39 @@
       <!--   侧边栏的菜单     -->
       <ul class="bsa-menu" data-bsa-toggle="sidebar" data-accordion="true" data-click-close="true">
         <li>
+          <!--首页保留，可以最后用来展示一些，查询的数据统计，比如每天查了多少次，之类的-->
           <a href="pages/welcome.html">
             <i class="bi bi-house"></i>首页
           </a>
         </li>
         <li>
           <a href="javascript:" class="has-children">
-            <i class="bi bi-person-lock"></i>权限管理
+            <i class="bi bi-person-lock"></i>查询管理
           </a>
           <ul>
+<!--            <li>-->
+<!--              <a href="pages/user.html">用户列表</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="pages/user2.html">用户列表(多部门版)</a>-->
+<!--            </li>-->
             <li>
-              <a href="pages/user.html">用户列表</a>
+              <a href="pages/pic8.html">图片搜索</a>
             </li>
             <li>
-              <a href="pages/user2.html">用户列表(多部门版)</a>
+              <a href="javascript:" class="has-children">文件上传</a>
+              <ul>
+                <!--建议使用原样式，仅支持单张上传就可以-->
+                <li><a href="pages/plugin-bootstrap-fileinput.html">bootstrap-fileinput</a></li>
+<!--                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>-->
+              </ul>
             </li>
             <li>
-              <a href="pages/role.html">角色列表</a>
+              <a href="pages/pic8.html">图库</a>
             </li>
-            <li>
-              <a href="pages/node.html">节点列表</a>
-            </li>
-            <li>
-              <a href="pages/pic8.html">图片列表</a>
-            </li>
-            <li>
-              <a href="pages/pic7.html">图片列表2</a>
-            </li>
+<!--            <li>-->
+<!--              <a href="pages/pic7.html">图片列表2</a>-->
+<!--            </li>-->
           </ul>
         </li>
 <!--以下是多余的不需要-->
