--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
   <!--  搜索组件(不需要可删除)  -->
   <li>
     <div class="bsa-header-item bsa-cursor-default">
-      <!--    搜索表单包裹区域        -->
-      <div class="bsa-search-form-wrapper"
-           data-bsa-toggle="navbar-search"
-           data-close-reset="false"
-           data-action="pages/search.html"
-           data-params='{"type":"article","user":"admin2"}'>
-        <div class="bsa-search-form">
-          <input type="text" class="form-control bsa-input-search" aria-label="搜索关键词"
-                 placeholder="搜索关键词">
-          <button class="bsa-search-submit-btn" type="submit"><i class="bi bi-search"></i></button>
-          <button class="bsa-search-close-btn" type="button"><i class="bi bi-x-lg"></i></button>
-        </div>
-      </div>
-      <!--    移动端搜索表单触发器(移动端会显示)        -->
-      <i class="bi bi-search bsa-search-form-toggler bsa-cursor-pointer"></i>
+<!--      &lt;!&ndash;    搜索表单包裹区域        &ndash;&gt;-->
+<!--      <div class="bsa-search-form-wrapper"-->
+<!--           data-bsa-toggle="navbar-search"-->
+<!--           data-close-reset="false"-->
+<!--           data-action="pages/search.html"-->
+<!--           data-params='{"type":"article","user":"admin2"}'>-->
+<!--        <div class="bsa-search-form">-->
+<!--          <input type="text" class="form-control bsa-input-search" aria-label="搜索关键词"-->
+<!--                 placeholder="搜索关键词">-->
+<!--          <button class="bsa-search-submit-btn" type="submit"><i class="bi bi-search"></i></button>-->
+<!--          <button class="bsa-search-close-btn" type="button"><i class="bi bi-x-lg"></i></button>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      &lt;!&ndash;    移动端搜索表单触发器(移动端会显示)        &ndash;&gt;-->
+<!--      <i class="bi bi-search bsa-search-form-toggler bsa-cursor-pointer"></i>-->
+<!--      <input type="text" id="searchQuery" placeholder="输入搜索词">-->
+<!--      <button id="searchButton">查询</button>-->
     </div>
   </li>
   <!--  占位(可以让后面的li居右)  -->
@@ -253,7 +255,7 @@
     <!--  侧边栏头部(用于展示品牌logo)  -->
     <div class="card-header bg-body d-flex align-items-center flex-shrink-0">
       <img src="dist/img/favicon-32x32.png" class="bsa-logo-icon" alt="logo-icon">
-      <div class="bsa-logo-text ms-2 bsa-ellipsis-2">bootstrap-admin</div>
+      <div class="bsa-logo-text ms-2 bsa-ellipsis-2">个人云</div>
     </div>
     <!--  侧边栏身体部分(用于主要的侧边栏菜单)  -->
     <div class="card-body p-0" data-overlayscrollbars-initialize>
@@ -261,185 +263,185 @@
       <ul class="bsa-menu" data-bsa-toggle="sidebar" data-accordion="true" data-click-close="true">
         <li>
           <!--首页保留，可以最后用来展示一些，查询的数据统计，比如每天查了多少次，之类的-->
-          <a href="pages/welcome.html">
-            <i class="bi bi-house"></i>首页
-          </a>
+<!--          <a href="pages/welcome.html">-->
+<!--            <i class="bi bi-house"></i>首页-->
+<!--          </a>-->
         </li>
         <li>
           <a href="javascript:" class="has-children">
             <i class="bi bi-person-lock"></i>查询管理
           </a>
           <ul>
-<!--            <li>-->
-<!--              <a href="pages/user.html">用户列表</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/user2.html">用户列表(多部门版)</a>-->
-<!--            </li>-->
+            <!--            <li>-->
+            <!--              <a href="pages/user.html">用户列表</a>-->
+            <!--            </li>-->
+            <!--            <li>-->
+            <!--              <a href="pages/user2.html">用户列表(多部门版)</a>-->
+            <!--            </li>-->
             <li>
-              <a href="pages/pic8.html">图片搜索</a>
+              <a href="pages/pic9.html">图片搜索</a>
             </li>
             <li>
               <a href="javascript:" class="has-children">文件上传</a>
               <ul>
                 <!--建议使用原样式，仅支持单张上传就可以-->
-                <li><a href="pages/plugin-bootstrap-fileinput.html">bootstrap-fileinput</a></li>
-<!--                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>-->
+                <li><a href="pages/plugin-bootstrap-fileinput.html">拖拽上传</a></li>
+                <!--                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>-->
               </ul>
             </li>
             <li>
               <a href="pages/pic8.html">图库</a>
             </li>
-<!--            <li>-->
-<!--              <a href="pages/pic7.html">图片列表2</a>-->
-<!--            </li>-->
+            <!--            <li>-->
+            <!--              <a href="pages/pic7.html">图片列表2</a>-->
+            <!--            </li>-->
           </ul>
         </li>
-<!--以下是多余的不需要-->
-<!--        <li>-->
-<!--          <a href="javascript:" class="has-children">-->
-<!--            <i class="bi bi-filetype-html"></i>示例页面-->
-<!--          </a>-->
-<!--          <ul>-->
-<!--            <li>-->
-<!--              <a href="pages/blank.html">新页面</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              &lt;!&ndash; target="_self":添加该属性可以让该页面不从tab页面里打开  &ndash;&gt;-->
-<!--              <a href="pages/lockscreen.html" target="_self">锁屏页</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/gallery.html">图库列表</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/errors.html">错误页面</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/login.html" target="_self">登录页面</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/timeline.html">时间轴</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/layout1.html">布局示例1</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/layout2.html">布局示例2</a>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/layout3.html">布局示例3</a>-->
-<!--            </li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="javascript:" class="has-children">-->
-<!--            <i class="bi bi-filetype-js"></i>插件-->
-<!--          </a>-->
-<!--          <ul>-->
-<!--            <li><a href="pages/plugin-day.js.html">day.js(时间格式)</a></li>-->
-<!--            <li><a href="pages/plugin-clipboard.html">复制粘贴插件</a></li>-->
-<!--            <li><a href="pages/plugin-shepherd.html">更新引导插件</a></li>-->
-<!--            <li><a href="pages/plugin-fullcalendar.html">日历</a></li>-->
-<!--            <li><a href="pages/plugin-video-js.html">视频播放器</a></li>-->
-<!--            <li><a href="pages/plugin-pickr.html">颜色选择器</a></li>-->
-<!--            <li><a href="pages/plugin-raty-js.html">评分插件</a></li>-->
-<!--            <li><a href="pages/plugin-bootstrap-input-spinner.html">输入框微调插件</a></li>-->
-<!--            <li><a href="pages/plugin-bs-stepper.html">步骤条插件</a></li>-->
-<!--            <li><a href="pages/plugin-sweetalert2.html">sweetalert2</a></li>-->
-<!--            <li><a href="pages/plugin-formvalidation.html">表单验证</a></li>-->
-<!--            <li><a href="pages/plugin-tempus-dominus.html">日期时间</a></li>-->
-<!--            <li><a href="pages/plugin-croppie.html">头像裁剪</a></li>-->
-<!--            <li>-->
-<!--              <a href="javascript:" class="has-children">树形组件</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/plugin-ztree.html">ztree</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="javascript:" class="has-children">图表</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/plugin-chart.html">chart.js</a></li>-->
-<!--                <li><a href="pages/plugin-echarts.html">echart.js</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="javascript:" class="has-children">数据表格</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/plugin-bootstrap-table.html">bootstrap-table</a></li>-->
-<!--                <li><a href="pages/plugin-datatables.html">datatables</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="javascript:" class="has-children">编辑器</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/plugin-wangeditor.html">wangeditor</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="javascript:" class="has-children">文件上传</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/plugin-bootstrap-fileinput.html">bootstrap-fileinput</a></li>-->
-<!--                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--            <li><a href="pages/plugin-select2.html">select2</a></li>-->
-<!--            <li><a href="pages/plugin-bootstrap-select.html">bootstrap-select</a></li>-->
-<!--            <li><a href="pages/plugin-fonticonpicker.html">图标选择器</a></li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="javascript:" class="has-children">-->
-<!--            <i class="bi bi-gear"></i>设置-->
-<!--          </a>-->
-<!--          <ul>-->
-<!--            <li><a href="pages/sys_website.html">网站设置</a></li>-->
-<!--            <li><a href="pages/sys_email.html">邮件服务</a></li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="docs/index.html" target="_blank">-->
-<!--            <i class="bi bi-filetype-doc"></i>文档-->
-<!--          </a>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <a href="javascript:" class="has-children">-->
-<!--            <i class="bi bi-list-nested"></i>多级菜单-->
-<!--          </a>-->
-<!--          <ul>-->
-<!--            <li><a href="pages/multilevel.html?id=1">一级菜单</a></li>-->
-<!--            <li>-->
-<!--              <a href="javascript:" class="has-children">一级菜单</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/multilevel.html?id=2">二级菜单</a></li>-->
-<!--                <li>-->
-<!--                  <a href="javascript:" class="has-children">二级菜单</a>-->
-<!--                  <ul>-->
-<!--                    <li><a href="pages/multilevel.html?id=3">三级菜单</a></li>-->
-<!--                    <li>-->
-<!--                      <a href="javascript:" class="has-children">三级菜单</a>-->
-<!--                      <ul>-->
-<!--                        <li><a href="pages/multilevel.html?id=4">四级菜单</a></li>-->
-<!--                        <li>-->
-<!--                          <a href="javascript:" class="has-children">四级菜单</a>-->
-<!--                          <ul>-->
-<!--                            <li><a href="pages/multilevel.html?id=5">五级菜单</a></li>-->
-<!--                            <li><a href="pages/multilevel.html?id=6">五级菜单</a></li>-->
-<!--                          </ul>-->
-<!--                        </li>-->
-<!--                      </ul>-->
-<!--                    </li>-->
-<!--                  </ul>-->
-<!--                </li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--              <a href="pages/multilevel.html?id=7" class="has-children">一级菜单</a>-->
-<!--              <ul>-->
-<!--                <li><a href="pages/multilevel.html?id=8">二级菜单</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-<!--          </ul>-->
-<!--        </li>-->
+        <!--以下是多余的不需要-->
+        <!--        <li>-->
+        <!--          <a href="javascript:" class="has-children">-->
+        <!--            <i class="bi bi-filetype-html"></i>示例页面-->
+        <!--          </a>-->
+        <!--          <ul>-->
+        <!--            <li>-->
+        <!--              <a href="pages/blank.html">新页面</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              &lt;!&ndash; target="_self":添加该属性可以让该页面不从tab页面里打开  &ndash;&gt;-->
+        <!--              <a href="pages/lockscreen.html" target="_self">锁屏页</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/gallery.html">图库列表</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/errors.html">错误页面</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/login.html" target="_self">登录页面</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/timeline.html">时间轴</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/layout1.html">布局示例1</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/layout2.html">布局示例2</a>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/layout3.html">布局示例3</a>-->
+        <!--            </li>-->
+        <!--          </ul>-->
+        <!--        </li>-->
+        <!--        <li>-->
+        <!--          <a href="javascript:" class="has-children">-->
+        <!--            <i class="bi bi-filetype-js"></i>插件-->
+        <!--          </a>-->
+        <!--          <ul>-->
+        <!--            <li><a href="pages/plugin-day.js.html">day.js(时间格式)</a></li>-->
+        <!--            <li><a href="pages/plugin-clipboard.html">复制粘贴插件</a></li>-->
+        <!--            <li><a href="pages/plugin-shepherd.html">更新引导插件</a></li>-->
+        <!--            <li><a href="pages/plugin-fullcalendar.html">日历</a></li>-->
+        <!--            <li><a href="pages/plugin-video-js.html">视频播放器</a></li>-->
+        <!--            <li><a href="pages/plugin-pickr.html">颜色选择器</a></li>-->
+        <!--            <li><a href="pages/plugin-raty-js.html">评分插件</a></li>-->
+        <!--            <li><a href="pages/plugin-bootstrap-input-spinner.html">输入框微调插件</a></li>-->
+        <!--            <li><a href="pages/plugin-bs-stepper.html">步骤条插件</a></li>-->
+        <!--            <li><a href="pages/plugin-sweetalert2.html">sweetalert2</a></li>-->
+        <!--            <li><a href="pages/plugin-formvalidation.html">表单验证</a></li>-->
+        <!--            <li><a href="pages/plugin-tempus-dominus.html">日期时间</a></li>-->
+        <!--            <li><a href="pages/plugin-croppie.html">头像裁剪</a></li>-->
+        <!--            <li>-->
+        <!--              <a href="javascript:" class="has-children">树形组件</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/plugin-ztree.html">ztree</a></li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="javascript:" class="has-children">图表</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/plugin-chart.html">chart.js</a></li>-->
+        <!--                <li><a href="pages/plugin-echarts.html">echart.js</a></li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="javascript:" class="has-children">数据表格</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/plugin-bootstrap-table.html">bootstrap-table</a></li>-->
+        <!--                <li><a href="pages/plugin-datatables.html">datatables</a></li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="javascript:" class="has-children">编辑器</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/plugin-wangeditor.html">wangeditor</a></li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="javascript:" class="has-children">文件上传</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/plugin-bootstrap-fileinput.html">bootstrap-fileinput</a></li>-->
+        <!--                <li><a href="pages/plugin-dropzone.html">dropzone</a></li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--            <li><a href="pages/plugin-select2.html">select2</a></li>-->
+        <!--            <li><a href="pages/plugin-bootstrap-select.html">bootstrap-select</a></li>-->
+        <!--            <li><a href="pages/plugin-fonticonpicker.html">图标选择器</a></li>-->
+        <!--          </ul>-->
+        <!--        </li>-->
+        <!--        <li>-->
+        <!--          <a href="javascript:" class="has-children">-->
+        <!--            <i class="bi bi-gear"></i>设置-->
+        <!--          </a>-->
+        <!--          <ul>-->
+        <!--            <li><a href="pages/sys_website.html">网站设置</a></li>-->
+        <!--            <li><a href="pages/sys_email.html">邮件服务</a></li>-->
+        <!--          </ul>-->
+        <!--        </li>-->
+        <!--        <li>-->
+        <!--          <a href="docs/index.html" target="_blank">-->
+        <!--            <i class="bi bi-filetype-doc"></i>文档-->
+        <!--          </a>-->
+        <!--        </li>-->
+        <!--        <li>-->
+        <!--          <a href="javascript:" class="has-children">-->
+        <!--            <i class="bi bi-list-nested"></i>多级菜单-->
+        <!--          </a>-->
+        <!--          <ul>-->
+        <!--            <li><a href="pages/multilevel.html?id=1">一级菜单</a></li>-->
+        <!--            <li>-->
+        <!--              <a href="javascript:" class="has-children">一级菜单</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/multilevel.html?id=2">二级菜单</a></li>-->
+        <!--                <li>-->
+        <!--                  <a href="javascript:" class="has-children">二级菜单</a>-->
+        <!--                  <ul>-->
+        <!--                    <li><a href="pages/multilevel.html?id=3">三级菜单</a></li>-->
+        <!--                    <li>-->
+        <!--                      <a href="javascript:" class="has-children">三级菜单</a>-->
+        <!--                      <ul>-->
+        <!--                        <li><a href="pages/multilevel.html?id=4">四级菜单</a></li>-->
+        <!--                        <li>-->
+        <!--                          <a href="javascript:" class="has-children">四级菜单</a>-->
+        <!--                          <ul>-->
+        <!--                            <li><a href="pages/multilevel.html?id=5">五级菜单</a></li>-->
+        <!--                            <li><a href="pages/multilevel.html?id=6">五级菜单</a></li>-->
+        <!--                          </ul>-->
+        <!--                        </li>-->
+        <!--                      </ul>-->
+        <!--                    </li>-->
+        <!--                  </ul>-->
+        <!--                </li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--            <li>-->
+        <!--              <a href="pages/multilevel.html?id=7" class="has-children">一级菜单</a>-->
+        <!--              <ul>-->
+        <!--                <li><a href="pages/multilevel.html?id=8">二级菜单</a></li>-->
+        <!--              </ul>-->
+        <!--            </li>-->
+        <!--          </ul>-->
+        <!--        </li>-->
 
       </ul>
     </div>
@@ -452,7 +454,7 @@
 
 <!--内容区域(.bsa-content-fixed类删除后即可变成单页版本)-->
 <div class="bsa-content bsa-content-fixed">
-  <div class="qtab" data-qt-tabs='[{"title":"首页","url":"pages/welcome.html","close":false}]'></div>
+  <div class="qtab" data-qt-tabs='[{"title":"图库","url":"pages/pic8.html","close":true}]'></div>
 </div>
 
 <!--版权信息-->
